# normalmap

./: .gitignore  .ycm_extra_conf.py  ChangeLog  README.md  configure.ac  mkycmflags
src/: Makefile.am  main.c  nmpng.c  nmpng.h  normalmap.c  normalmap.h  options.c  options.h
win32/: README.md  X-Consortium.txt  libpng.txt  zlib.txt
